updated the file with latest contents